--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Device Orientation Example</h1>
   <p>Check the browser console for device orientation information.</p>
+  <div id="orientationInfo"></div>
 </body>
 </html>
