--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Device Orientation Example</h1>
-  <p>Check the browser console for device orientation information.</p>
+  <p>Click the button below to request access and display device orientation information:</p>
+  <button id="requestButton">Request Access</button>
   <div id="orientationInfo"></div>
 </body>
 </html>
